Fix z-index issue in ContextualMenu component

--- a/src/components/TaskBar/ContextualMenu/contextualmenu.module.css
+++ b/src/components/TaskBar/ContextualMenu/contextualmenu.module.css
@@ -2,7 +2,7 @@
   height: 300px;
   background-color: rgba(28, 28, 28);
   width: 300px;
-  z-index: 1;
+  z-index: 10;
   position: absolute;
   bottom: 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
